# camoufox

./: .cursorignore  .gitattributes  .gitignore  AGENTS.md  BUILD_ERROR_LOG.txt  BUILD_FIXES_142.md  CAMOUFOX_ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Capability Gap Analysis Report.txt  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_INTEGRATION_PROTOCOL.md  FIREFOX_142_UPGRADE_NOTES.md  FIREFOX_UPGRADE_WORKFLOW.md  Git Pre-Push Verification Protocol.txt  ISSUE_BODY.md  LUCID_EMPIRE_REPORT.txt  LUCID_GRAND_VERIFICATION_MASTER.py  LUCID_INTEGRATION_REPORT.txt  LUCID_INTEGRATION_SUMMARY.txt  LUCID_PREFLIGHT_CHECK.py  LUCID_UNIFIED_PREFLIGHT.py  Lucid Empire Integration Protocol Executed.txt  Makefile  PHASE5_UPGRADE_NOTES.md  PR_BODY.md  README.md  TASK.md  TESTING_CHECKLIST.md  WORKFLOW.md  appveyor.yml  auto_fix_fingerprint_patch.py  build.yml  commerce_injector.py  control_deck.html  fix_all_patches.py  fix_all_rejects.py  fix_fingerprint_patch.py  fix_navigator.py  (+16 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
PR_NOTES/: DIAGNOSTICS_ADDED.md
assets/: base.mozconfig  ghost_motor_v5.onnx  linux.mozconfig  macos.mozconfig  uBOAssets.json  windows.mozconfig
browser-tests/: test-websocket-port-remapping.html  test-websocket-port-remapping.py
build-tester/: README.md  package-lock.json  package.json  requirements.txt  run_tests.sh
camoufox-py/: pyproject.toml
core/: genesis_engine.py
docs/: FIREFOX_UPGRADE_WORKFLOW.md  beta-testing-ff146.md  patch-upgrading-guide.md  per-context-patches.md  playwright-maintenance.md
example/: async_example.py  example.py  example_simple.py
genesis/: docker-compose.yml
jsonvv/: README.md  publish.sh  pyproject.toml
jsonvv/jsonvv/: __init__.py  __main__.py  exceptions.py  parser.py  strings.py  types.py  validator.py
launcher/: addon.go  build.sh  camoufox-launcher  constants.go  exec.go  go.mod  go.sum  main.go  procgroup-unix.go  procgroup-win.go  runner.go  validate.go  xpi-dl.go
legacy/: README.md
modification instuctions/: Genesis Engine (Aging).txt  Golden Template Harvester.txt  Lucid Launcher (GUI).txt  Master Build Directive.txt  Read me 2nd.txt  Readme 1st.txt
modules/: commerce_injector.py  humanization.py
network/: xdp_outbound.c
patches/: all-addons-private-mode.patch  anti-font-fingerprinting.patch  audio-context-spoofing.patch  audio-fingerprint-manager.patch  auto-pin-extensions.patch  backgroudtasks-bugfix.patch  backport-rust-crates.bootstrap  browser-init.patch  canvas-spoofing.patch  chromeutil.patch  config.patch  cross-process-storage.patch  cursor-highlighter.patch  dark-theme-gif.patch.opt  debug-url-navigation.patch  debug.patch  disable-extension-newtab.patch  disable-remote-cue.patch  fingerprint-injection.patch  fingerprint-injection.patch.bak  fingerprint-injection.patch.trailing1  font-fingerprinting-by-context.patch  font-hijacker.patch  font-hijacker.patch.bak2  font-hijacker.patch.bak3  font-hijacker.patch.bak6  font-hijacker.patch.old  font-list-spoofing.patch  geolocation-spoofing.patch  global-style-sheets.patch  locale-spoofing.patch  macos-sandbox-crash-fix.README.md  (+32 more)
pythonlib/: README.md  publish.sh  pyproject.toml
pythonlib/camoufox/: ANTIDETECT_FEATURES.md  __init__.py  __main__.py  __version__.py  addons.py  antidetect.py  async_api.py  browserforge.yml  exceptions.py  fingerprint-presets.json  fingerprint_seed.py  fingerprints.py  fonts.json  geolocation.py  ip.py  launchServer.js  locale.py  locales.py  multiversion.py  pkgman.py  repos.yml  server.py  setup.cfg  sync_api.py  territoryInfo.xml  utils.py  virtdisplay.py  voices.json  warnings.py  warnings.yml  xpi_dl.py
pythonlib/camoufox/gui/: __init__.py  backend.py
pythonlib/camoufox/gui/qml/: main.qml
pythonlib/camoufox/webgl/: __init__.py  sample.py  webgl_data.db
pythonlib/examples/: advanced_antidetect_demo.py
pythonlib/tests/: test_virtdisplay.py
scripts/: _mixin.py  _utils.py  add_deploy_key.sh  bootstrap.py  ci-monitor.ps1  const.py  copy-additions.sh  developer.py  generate-assets-car.sh  generate-locales.sh  init-patch.py  install-local-build.sh  mozfetch.sh  moztree  multibuild.py  next_patch.py  package-helper.sh  package.py  patch.py  pyproject.toml  run-pw.py  run_lucid_workflow.sh  setup-wasi-linux.sh  update-ubo-assets.sh  upstream.sh
scripts/benchmark/: Dockerfile  Makefile  benchmark.py
scripts/examples/: buttonclick.html  webgl.html
tests/: README.md  conftest.py  local-requirements.txt  pyproject.toml  run-tests.sh  server.py  setup-venv.sh  test_antidetect.py  test_fingerprint_dict.py
tests/async/: test_accessibility.py  test_add_init_script.py  test_assertions.py  test_browser.py  test_browsercontext.py  test_browsercontext_add_cookies.py  test_browsercontext_clearcookies.py  test_browsercontext_cookies.py  test_browsercontext_events.py  test_browsercontext_proxy.py  test_browsercontext_request_fallback.py  test_browsercontext_request_intercept.py  test_browsercontext_route.py  test_browsercontext_service_worker_policy.py  test_browsercontext_storage_state.py  test_browsertype_connect.py  test_cdp_session.py  test_console.py  test_context_manager.py  test_defaultbrowsercontext.py  test_dialog.py  test_download.py  test_element_handle.py.disabled  test_element_handle_wait_for_element_state.py  test_emulation_focus.py  test_expect_misc.py  test_fetch_browser_context.py  test_fetch_global.py  test_frames.py  test_geolocation.py  test_har.py  test_headful.py  test_ignore_https_errors.py  test_input.py  test_issues.py  test_jshandle.py  test_keyboard.py  test_locators.py  test_navigation.py  test_network.py  (+27 more)
tests/patches/: 2026-04-30-system-ui-font-override.py  config-overrides.py  context-api-seed.py  context-fingerprint-seed.py  fingerprint-seed.py  helpers.py  launch-options-seed.py  live-fingerprint-seed.py  live-webgl-context.py
(+261 files in other folders)
