[project]
name = "camoufox"
version = "0.4.11"
description = "Wrapper around Playwright to help launch Camoufox"
authors = [{ name = "daijro", email = "daijro.dev@gmail.com" }]
requires-python = "~=3.8"
readme = "README.md"
license = "MIT"
keywords = [
    "client",
    "fingerprint",
    "browser",
    "scraping",
    "injector",
    "firefox",
    "playwright",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click",
    "requests",
    "orjson",
    "browserforge>=1.2.1,<2",
    "playwright",
    "pyyaml",
    "platformdirs",
    "tqdm",
    "numpy",
    "ua_parser",
    "typing_extensions",
    "screeninfo",
    "lxml",
    "language-tags",
    "pysocks",
]

[project.optional-dependencies]
geoip = ["geoip2"]

[project.urls]
Homepage = "https://camoufox.com/python"
Repository = "https://github.com/daijro/camoufox"

[project.scripts]
camoufox = "camoufox.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
follow_untyped_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
