[project]
name = "camoufox-scripts"
version = "0.1.0"
authors = [
    { name = "daijro", email = "daijro.dev@gmail.com" },
    { name = "Kornelijus TvarijanaviÄius", email = "16837066+Kornelijus@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "camoufox>=0.4.11",
    "easygui>=0.98.3",
    "mercurial>=7.0.1",
    "mypy>=1.15.0",
    "playwright>=1.51.0",
    "ruff>=0.11.5",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
]

[tool.mypy]
follow_untyped_imports = true
